--- a/WolvenKit.App/packages.config
+++ b/WolvenKit.App/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="15.0.5" targetFramework="net48" />
+  <package id="FastMember" version="1.5.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="3.1.1" targetFramework="net48" />
