--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -121,8 +121,8 @@
     <Compile Include="Tools\DDS\Texconv.cs" />
     <Compile Include="Tools\FNV1A\FNV1A32HashAlgorithm.cs" />
     <Compile Include="Tools\FNV1A\FNV1A64HashAlgorithm.cs" />
+    <Compile Include="Model\IWitcherArchiveManager.cs" />
     <Compile Include="Model\IWitcherArchive.cs" />
-    <Compile Include="Model\IWitcherArchiveType.cs" />
     <Compile Include="Model\IWitcherFile.cs" />
     <Compile Include="Model\CommonEnums.cs" />
     <Compile Include="Model\HashDump.cs" />
