--- a/WolvenKit.Render/packages.config
+++ b/WolvenKit.Render/packages.config
@@ -1,9 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AssimpNet" version="4.1.0" targetFramework="net48" />
   <package id="DockPanelSuite" version="3.0.6" targetFramework="net48" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net48" />
   <package id="FSharp.Core" version="4.7.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="SharpDX" version="4.2.0" targetFramework="net48" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net48" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net48" />
