--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Reflection\REDAttribute.cs" />
     <Compile Include="Reflection\REDReflection.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
+    <Compile Include="Types\BufferedTypes\BufferStructs\Complex\SBlockDataObjects\SBlockDataMeshObject.cs" />
     <Compile Include="Types\BufferedTypes\BufferStructs\Complex\SVector4D.cs" />
     <Compile Include="Types\BufferedTypes\BufferStructs\SUmbraTileData.cs" />
     <Compile Include="Types\BufferedTypes\Complex\CQuestScriptBlock.cs" />
