--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -174,6 +174,8 @@
     <Compile Include="Types\BufferedTypes\BufferStructs\Complex\SBlockDataObjects\SBlockDataLight.cs" />
     <Compile Include="Types\BufferedTypes\BufferStructs\Complex\SBlockDataObjects\SBlockDataMeshObject.cs" />
     <Compile Include="Types\BufferedTypes\BufferStructs\Complex\SBlockDataObjects\SBlockDataParticles.cs" />
+    <Compile Include="Types\BufferedTypes\BufferStructs\Complex\SBlockDataObjects\SBlockDataRigidBody.cs" />
+    <Compile Include="Types\BufferedTypes\BufferStructs\Complex\SBlockDataObjects\SBlockDataSpotLight.cs" />
     <Compile Include="Types\BufferedTypes\BufferStructs\Complex\SVector4D.cs" />
     <Compile Include="Types\BufferedTypes\BufferStructs\SUmbraTileData.cs" />
     <Compile Include="Types\BufferedTypes\Complex\CQuestScriptBlock.cs" />
