--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -22,12 +22,8 @@ jobs:
       run: msbuild  WolvenKit.sln -p:Configuration=Release
     - name: Zip Release
       run: |
-        choco install 7zip --y
-        cd $Env:GITHUB_WORKSPACE\\WolvenKit
-        cd bin
-        7z a WolvenKit.zip ./Release/
-        cd
-        dir
+        cd $Env:GITHUB_WORKSPACE\\WolvenKit\bin\x64
+        Compress-Archive -Path ./Release/ -DestinationPath WolvenKit.zip
     - name: Deploy Nightly
       uses: Maxzor/deploy-nightly@v1.0.4
       env:
