--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
-* -text
-* whitespace=cr-at-eol
+# Set the default behavior, in case people don't have core.autocrlf set.
+* text eol=crlf
+
+# Explicitly declare text files you want to always be normalized and converted
+# to native line endings on checkout.
+*.cs text
+*.csproj text
+*.resx text
