--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,33 @@
-# Set the default behavior, in case people don't have core.autocrlf set.
-* text eol=crlf
+# Declare files to normalize crlf, in case people don't have core.autocrlf set.
+*.conf			text eol=crlf
+*.config		text eol=crlf
+*.cs			text eol=crlf
+*.csproj		text eol=crlf
+*.csv			text eol=crlf
+*.editorconfig		text eol=crlf
+*.gitattributes		text eol=crlf
+*.gitignore		text eol=crlf
+*.gitmodules		text eol=crlf
+*.manifest		text eol=crlf
+*.md			text eol=crlf
+*.resx			text eol=crlf
+*.settings		text eol=crlf
+*.sln			text eol=crlf
+*.txt			text eol=crlf
+*.xml			text eol=crlf
+*.yml			text eol=crlf
 
-# Explicitly declare text files you want to always be normalized and converted
-# to native line endings on checkout.
-*.cs text
-*.csproj text
-*.resx text
+
+# Explicitly declare files you do not want to be treated as text
+*.bmp binary
+*.dll binary
+*.exe binary
+*.ico binary
+*.jpg binary
+*.md2 binary
+*.png binary
+*.rtf binary
+*.svg -text binary
+*.tga binary
+*.xbm binary
+*.zip binary
