--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -553,6 +553,7 @@
     <Compile Include="Services\IThemedContent.cs" />
     <Compile Include="UIConfiguration.cs" />
     <Compile Include="UIController.cs" />
+    <Compile Include="Utility\UnbundleGameArgs.cs" />
     <Compile Include="Utility\AddFileArgs.cs" />
     <Compile Include="Utility\LoadFileArgs.cs" />
     <Compile Include="WitcherListViewItem.cs" />
@@ -1158,7 +1159,7 @@
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
       <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 et x64%29</ProductName>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 and x64%29</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
