--- a/WolvenKit.Common/packages.config
+++ b/WolvenKit.Common/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="15.0.5" targetFramework="net48" />
+  <package id="Magick.NET.Core" version="5.0.0" targetFramework="net48" />
+  <package id="Magick.NET-Q8-AnyCPU" version="7.22.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.0.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="3.7.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="3.7.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
+  <package id="Pfim" version="0.9.1" targetFramework="net48" />
   <package id="protobuf-net" version="2.4.6" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net48" />
