--- a/WolvenKit.Console/WolvenKit.Console.csproj
+++ b/WolvenKit.Console/WolvenKit.Console.csproj
@@ -106,6 +106,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Console_CR2WToPostgres.cs" />
+    <Compile Include="DumpDDSInfo.cs" />
+    <Compile Include="DumpCache.cs" />
+    <Compile Include="DumpXbmInfo.cs" />
+    <Compile Include="DumpCollision.cs" />
+    <Compile Include="DumpCookedEffects.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
