--- a/WolvenKit.Wwise/WolvenKit.Wwise.csproj
+++ b/WolvenKit.Wwise/WolvenKit.Wwise.csproj
@@ -75,6 +75,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="dbutil, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
