--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -62,6 +62,10 @@
     <Reference Include="ICSharpCode.SharpZipLib, Version=1.2.0.246, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpZipLib.1.2.0\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
+    <Reference Include="IrrlichtLime, Version=1.6.1.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Libs\IrrlichtLime.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.1\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -240,6 +244,7 @@
     <Compile Include="ViewModels\Documents\ScriptDocumentViewModel.cs" />
     <Compile Include="ViewModels\Documents\CR2WDocumentViewModel.cs" />
     <Compile Include="ViewModels\Documents\IDocumentViewModel.cs" />
+    <Compile Include="ViewModels\BulkExportViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\BulkEditViewModel.cs" />
     <Compile Include="ViewModels\Documents\CloseableViewModel.cs" />
@@ -271,6 +276,10 @@
     <ProjectReference Include="..\Wolvenkit.Radish\WolvenKit.Radish.csproj">
       <Project>{D4D390BB-C14D-423A-861A-470BED6D40A9}</Project>
       <Name>WolvenKit.Radish</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WolvenKit.Render\WolvenKit.Render.csproj">
+      <Project>{8be56f4f-3b98-4bd8-8052-2b5e630af3d7}</Project>
+      <Name>WolvenKit.Render</Name>
     </ProjectReference>
     <ProjectReference Include="..\WolvenKit.W3Speech\WolvenKit.W3Speech.csproj">
       <Project>{c025f253-c78b-4a3b-87e7-1b2a1a453b97}</Project>
