--- a/WolvenKit.Scaleform/WolvenKit.Scaleform.csproj
+++ b/WolvenKit.Scaleform/WolvenKit.Scaleform.csproj
@@ -68,6 +68,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
