--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -130,6 +130,7 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>
     </DocumentationFile>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -141,6 +142,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <NoWarn>1591</NoWarn>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -425,6 +427,12 @@
     </Compile>
     <Compile Include="Forms\Editors\PtrEditor.Designer.cs">
       <DependentUpon>PtrEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MVVM\frmBulkExporter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MVVM\frmBulkExporter.Designer.cs">
+      <DependentUpon>frmBulkExporter.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\MVVM\frmBulkEditor.cs">
       <SubType>Form</SubType>
@@ -782,6 +790,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Editors\PtrEditor.resx">
       <DependentUpon>PtrEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MVVM\frmBulkExporter.resx">
+      <DependentUpon>frmBulkExporter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MVVM\frmWcc.resx">
       <DependentUpon>frmWcc.cs</DependentUpon>
